--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhiqi Wang"
-  avatar           : "profile.png"
+  avatar           : "snoopy.jpg"
   bio              : "wisdom zero question"
   location         : "Wuhan, China"
   employer         :
